RESOLVED FIXED 251093
[macOS] Fix sandbox related error message
https://bugs.webkit.org/show_bug.cgi?id=251093
Summary [macOS] Fix sandbox related error message
Per Arne Vollan
Reported 2023-01-24 10:01:02 PST
On macOS, creating a generic Mach bootstrap sandbox extension is currently failing. We can temporarily disable creating this sandbox extension on macOS.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-01-24 10:01:22 PST
Per Arne Vollan
Comment 2 2023-01-24 10:06:38 PST
EWS
Comment 3 2023-01-24 15:33:17 PST
Committed 259313@main (7e8a23f0c35a): <https://commits.webkit.org/259313@main> Reviewed commits have been landed. Closing PR #9052 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.