[macOS] Fix sandbox related error message https://bugs.webkit.org/show_bug.cgi?id=251093 rdar://104607120

Reviewed by Chris Dumez.

On macOS, creating a generic Mach bootstrap sandbox extension is currently failing.
We can temporarily disable creating this sandbox extension on macOS.

* Source/WTF/wtf/PlatformHave.h:
* Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb.in:
* Source/WebKit/Shared/Cocoa/SandboxExtensionCocoa.mm:
(WebKit::SandboxExtension::createHandlesForMachLookup):

Canonical link: https://commits.webkit.org/259313@main